src/components/Modal/modal.scss
.sb-modal {
  @keyframes fadein {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }

  position: relative;
  display: block;
  box-sizing: border-box;
  width: 100%;
  max-width: 620px;
  margin: auto;
  padding: 35px;
  background-color: $white;
  border-radius: 5px;
  box-shadow: 0 2px 17px 3px rgba(34, 42, 69, 0.07);
  animation: fadein 0.3s;

  &--scrollbar {
    overflow-x: hidden;
    overflow-y: auto;
  }

  &--close-on-header &__close-button {
    right: 35px;
    top: 35px;
  }

  &__close-button {
    @include base--icon-hover;

    position: absolute;
    right: 14px;
    top: 14px;
    z-index: 1;
    background-color: $white;
    border: 0;
    cursor: pointer;
  }

  &-content {
    box-sizing: border-box;
    width: 100%;
    min-height: 30px;
    padding: 5px 0 20px;
    color: $sb-dark-blue-75;
    font-size: $font-size-default;
  }

  &-footer {
    bottom: 0;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-end;
    width: 100%;
    min-height: 80px;
    margin-bottom: -35px;
    margin-left: -35px;
    padding: 0 35px;
    background-color: $light-50;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
  }

  &-header {
    box-sizing: border-box;
    width: 100%;
    margin: 0;
    padding-bottom: 10px;

    > svg {
      display: block;
      margin: 0 auto;
      margin-bottom: 30px;
    }

    &--left {
      display: inline-flex;
      vertical-align: middle;
      padding-top: 0;
      line-height: 2;
      text-align: left;

      svg {
        margin: 0;
        margin-right: 25px;
      }
    }

    &__title {
      color: $sb-dark-blue;
      font-size: $heading-lg;
      font-weight: $font-weight-bold;
      text-align: center;
    }

    &__subtitle {
      font-size: $heading-base;
      line-height: 1.2;
    }

    &__actions {
      display: flex;
      align-items: center;
      padding-right: 40px;

      > * {
        margin-left: 10px;
      }

      :first-child {
        margin-left: 0;
      }

      .sb-modal__close-button {
        width: 36px;

        svg {
          margin: 0;
        }
      }
    }
  }

  &__full-width {
    max-width: 100%;
    min-width: 620px;
  }

  &__large {
    max-width: 720px;
  }

  &__type--buttons {
    display: flex;
    justify-content: center;
  }
}

